--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </button>
     </div>
 
-    <audio id="backgroundMusic" loop src="https://github.com/a-khadafi/wedding-invitation/raw/main/assets/music/background-music.mp3"></audio>
+    <audio id="backgroundMusic" loop src="Interaktifundangan.mp3></audio>
     <div class="music-player" id="musicPlayer">
         <i class="fa-solid fa-compact-disc"></i>
     </div>
@@ -817,4 +817,5 @@
         });
     </script>
 </body>
+
 </html>
