--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </button>
     </div>
 
-    <audio id="backgroundMusic" loop src="Interaktifundangan.mp3></audio>
+<audio id="backgroundMusic" loop src="Interaktifundangan.mp3"></audio>
     <div class="music-player" id="musicPlayer">
         <i class="fa-solid fa-compact-disc"></i>
     </div>
@@ -538,7 +538,7 @@
                 </div>
 
                 <div class="family-container" data-aos="fade-up" data-aos-delay="400">
-                    <img src="galeri2.jpg" alt="divider" class="divider" data-aos="zoom-in">
+<img src="galeri2.jpg" alt="Gallery 2" data-aos="zoom-in-up" data-aos-delay="200">
                     <h3>Turut Berbahagia</h3>
                     <div class="family-wrapper">
                         <div class="family-list">
