--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 </div>
 
                 <div class="family-container" data-aos="fade-up" data-aos-delay="400">
-<img src="galeri2.jpg" alt="Gallery 2" data-aos="zoom-in-up" data-aos-delay="200">
+                    <img src="galeri2.jpg" alt="divider" class="divider" data-aos="zoom-in">
                     <h3>Turut Berbahagia</h3>
                     <div class="family-wrapper">
                         <div class="family-list">
@@ -818,3 +818,4 @@
     </script>
 </body>
 </html>
+
